[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

members = [
    "crates/bevy_15",
    "crates/bevy_14",
    "crates/bevy_13",
    "crates/pullrequest_16991",
    "crates/pullrequest_17041",
    "crates/bevy_main",
    "crates/common",
]

[workspace.dependencies]
common = { path = "./crates/common" }
